# BasicsOfCodingRust

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md
01_hello-world/: hello-world.md
02_values/: Cargo.toml  values.md
03_variables/: variables.md
04_constants/: constants.md
05_for/: Cargo.toml  for.md
06_if-else/: Cargo.toml  if-else.md
07_switch/: Cargo.toml  switch.md
08_arrays/: arrays.md
09_slices/: slices.md
10_maps/: Cargo.toml  maps.md
11_range/: Cargo.toml  range.md
12_functions/: functions.md
13_multiple-return-values/: Cargo.toml  multiple-return-values.md
14_variadic-functions/: Cargo.toml  variadic-functions.md
15_closures/: closures.md
16_recursion/: Cargo.toml  recursion.md
17_pointers/: Cargo.toml  pointers.md
18_structs/: structs.md
19_methods/: Cargo.toml  methods.md
20_interfaces/: Cargo.toml  interfaces.md
21_errors/: errors.md
22_strings-and-runes/: Cargo.toml  strings-and-runes.md
23_struct-embedding/: Cargo.toml  struct-embedding.md
24_enums/: enums.md
25_custom-errors/: Cargo.toml  custom-errors.md
26_generics/: generics.md
27_goroutines/: Cargo.toml  goroutines.md
28_channels/: Cargo.toml  channels.md
29_select/: Cargo.toml  select.md
30_timeouts/: Cargo.toml  timeouts.md
31_timers/: Cargo.toml  timers.md
32_tickers/: Cargo.toml  tickers.md
33_mutexes/: Cargo.toml  mutexes.md
34_atomic-counters/: Cargo.toml  atomic-counters.md
35_waitgroups/: Cargo.toml  waitgroups.md
36_worker-pools/: Cargo.toml  worker-pools.md
37_rate-limiting/: Cargo.toml  rate-limiting.md
38_recover/: Cargo.toml  recover.md
39_logging/: Cargo.toml  logging.md
40_sorting/: Cargo.toml  sorting.md
41_sorting-by-functions/: Cargo.toml  sorting-by-functions.md
42_panic/: Cargo.toml  panic.md
43_defer/: Cargo.toml  defer.md
44_collection-functions/: Cargo.toml  collection-functions.md
45_string-functions/: Cargo.toml  string-functions.md
46_string-formatting/: Cargo.toml  string-formatting.md
47_regular-expressions/: Cargo.toml  regular-expressions.md
48_json/: Cargo.toml  json.md
49_xml/: Cargo.toml  xml.md
50_time/: Cargo.toml  time.md
51_epoch/: Cargo.toml  epoch.md
52_time-formatting-parsing/: Cargo.toml  time-formatting-parsing.md
53_random-numbers/: Cargo.toml  random-numbers.md
54_number-parsing/: Cargo.toml  number-parsing.md
61_file-paths/: Cargo.toml  (+1 more)
(+119 files in other folders)
